(lang dune 3.20)

(name ocamba)

(generate_opam_files true)

(source
 (github estr3llas/ocamba))

(authors "Otavio M.")

(maintainers "Otavio M.")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocamba)
 (synopsis "Generate linear mixed boolean arithmetic expressions through pattern matching.")
 (description "Generate linear mixed boolean arithmetic expressions through pattern matching.")
 (depends ocaml)
 (tags
  ("mba" "obfuscation")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
